--- a/index.css
+++ b/index.css
@@ -21,12 +21,14 @@ h1 {
 }
 
 .section {
+    color: aliceblue;
     width: 80%;
     max-width: 1200px;
     margin: 20px 0;
 }
 
 .section h2 {
+    color: aliceblue;
     font-size: 3rem;
     text-align: center;
     margin-bottom: 20px;
